--- a/TorboFile/assets/BaseDictionary.xaml
+++ b/TorboFile/assets/BaseDictionary.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-					xmlns:convert="clr-namespace:Lemur.Windows.Converters"
-                    xmlns:local="clr-namespace:TorboFile.assets">
+					xmlns:convert="clr-namespace:Lemur.Windows.Converters">
 
 	<!-- CONVERTERS -->
 	
