--- a/TorboFile/View/Controls/MainViews/CustomSearch.xaml
+++ b/TorboFile/View/Controls/MainViews/CustomSearch.xaml
@@ -5,8 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 			 xmlns:matchmodel="clr-namespace:Lemur.Operations.FileMatching.Models"
 			 xmlns:types="clr-namespace:Lemur.Types"
-			 xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-			 xmlns:b="clr-namespace:Lemur.Windows.Behaviors"
+			 xmlns:r="clr-namespace:TorboFile.Properties"
 			 xmlns:mvvm="clr-namespace:Lemur.Windows.MVVM"
 			 xmlns:appmodels="clr-namespace:TorboFile.ViewModels"
 			 xmlns:controls="clr-namespace:TorboFile.View.Controls"
